@@ -1,3 +1,6 @@
+12 Aug 2005 mipsator
+ * added support for NaN and infinity in vsnprintf().
+
 10 Aug 2005 mipsator
  * added strdup() in compat.
  * fragmented a bit vsnprintf() related functions.
@@ -43,6 +46,8 @@
  * include config.h in compat/pmk_sys_types.h.
 
 30 Jun 2005 mipsator
+ 
+ 
  * added support for a configuration script in pmkscan.
  * added an example of configuration script.
 
